correcting icon and cert alignment

--- a/src/components/styles/about.css
+++ b/src/components/styles/about.css
@@ -19,13 +19,14 @@
 .icon-grid {
   display: grid;
   grid-template-columns: auto auto auto auto auto;
-  gap: 10px;
+  gap: 5px;
+  row-gap: 20px;
+  margin: 10px;
 }
 
 .icon-provider {
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-  padding: 25px;
-  margin: 10px;
+  padding: 15px;
   border-radius: 5px;
 }
 .certs-main {
@@ -95,6 +96,7 @@
   user-select: none;
   font-weight: bolder;
   color: black;
+  padding: 30px;
 }
 
 .certs-card:hover {
@@ -115,6 +117,8 @@
   }
   .icon-grid {
     grid-template-columns: auto auto auto;
+    gap: 3px;
+    margin: 30px;
   }
 }
 
@@ -124,7 +128,8 @@
   }
   .icon-grid {
   grid-template-columns: auto auto auto;
-  i}
+  gap: 1px;
+  }
 }
 
 @media screen and (max-width: 1500px) and (min-width: 1291px) {
